+ Added theme preview to marketplace bundle items